# Parcial1_Gestion

./: .gitignore  CHANGE-04_COMPLETION.md  CHANGE-07_FRONTEND_COMPLETION.md  VERIFICATION_CHANGE-00a.md  VERIFICATION_CHANGE-00b.md  agents.md  conftest.py  debug-commands.txt  mcp.json  pytest.ini  run_backend.py  skills-lock.json
backend/: .coverage  .env.example  DEVELOPER_GUIDE.md  README.md  alembic.ini  coverage.xml  fastapi.toml  install.bat  pyproject.toml  pytest.ini  requirements.txt  reset_admin.py  test_bcrypt_debug.py  verify_setup.py
backend/app/: __init__.py  config.py  database.py  dependencies.py  exceptions.py  handlers.py  logging_config.py  main.py  sanitization.py  security.py  uow.py
backend/app/db/: __init__.py  init_db.py  seed.py
backend/app/middleware/: cors.py  rate_limiter.py  request_id.py
backend/app/models/: __init__.py  categoria.py  direccion_entrega.py  estado_pedido.py  forma_pago.py  ingrediente.py  mixins.py  pedido.py  producto.py  rol.py  usuario.py  usuario_rol.py
backend/app/modules/: __init__.py
backend/app/repositories/: __init__.py  base.py  categoria_repository.py  direccion_repository.py  historial_repository.py  ingrediente_repository.py  pedido_repository.py  producto_repository.py
backend/migrations/: __init__.py  env.py
backend/migrations/versions/: 001_initial.py  002_add_seed_models.py  003_add_refresh_token.py  004_add_categorias_table.py  008_add_pedidos_tables.py  (+8 more)
backend/scripts/: verify.bat
backend/tests/: __init__.py  conftest.py  models.py  test_admin.py  test_direcciones.py  test_ingredientes.py
(+931 files in other folders)
